--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </nav>
     </header>
     <main>
-        <h2>About This Site</h2>
-        <p>This is a simple static HTML site. You can customize it by editing the HTML and CSS.</p>
+        <h2>DevOps II</h2>
+        <p>CI/CD, Containers and Cloud Fundamentals.</p>
     </main>
     <footer>
         &copy; 2025 My Static Site
